# jlight

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: lev_dist.jzl  lisp.jzl  wc.jzl
jlight-vm/: .gitmodules  Cargo.toml
jlight-vm/src/: lib.rs  main.rs
jlight-vm/src/bytecode/: block.rs  framework.rs  instructions.rs  mod.rs
jlight-vm/src/heap/: global.rs  mem.rs  mod.rs  tracer.rs
jlight-vm/src/heap/ieiunium/: freelist.rs  mod.rs
jlight-vm/src/heap/parallel/: mod.rs  tracer.rs
jlight-vm/src/heap/serial/: mod.rs
jlight-vm/src/runtime/: context.rs  interpreter.rs  mod.rs  module.rs  object.rs  state.rs  string_pool.rs  threaded_interpreter.rs  threads.rs  value.rs
jlight-vm/src/runtime/builtins/: array.rs  io.rs  mod.rs  thread.rs
jlight-vm/src/runtime/fusion/: instruction.rs  mod.rs  optimizer.rs  tracing_interpreter.rs
jlight-vm/src/util/: arc.rs  deref_ptr.rs  mod.rs  ptr.rs  rc.rs  tagged_pointer.rs
src/: ast.rs  bytecode.rs  chunk.rs  codegen.rs  config.rs  context.rs  hasher.rs  lexer.rs  lib.rs  main.rs  match_.rs  module.rs  msg.rs  object.rs  object_value.rs  parser.rs  process.rs  reader.rs  state.rs  string_pool.rs  tagged_pointer.rs  token.rs
src/heap/: addr.rs  block.rs  block_list.rs  bucket.rs  copy_object.rs  generation_config.rs  global.rs  global_allocator.rs  histograms.rs  local_allocator.rs  map.rs  mod.rs  permament.rs  remembered.rs  tracer.rs
src/runtime/: machine.rs  object.rs
src/scheduler/: mod.rs  proc_pool.rs  proc_worker.rs  state.rs  timeout.rs  timeout_worker.rs  worker.rs
src/sync/: arc.rs  mod.rs  park.rs  queue.rs
src/util/: mod.rs  tagged_pointer.rs
stdlib/: format.jzl  functional.jzl
syntax-showcase/: classes.jazz  functions_and_lambdas.jazz  objects.jazz
vm/: .gitignore  Cargo.toml
vm/src/: lib.rs  main.rs
vm/src/bytecode/: arithprofile.rs  basicblock.rs  instruction.rs  mod.rs
vm/src/heap/: copy.rs  freelist_alloc.rs  gc.rs  gc_pool.rs  mod.rs  space.rs
vm/src/heap/cms/: atomic_list.rs  mod.rs  node_pool.rs  stub.rs
vm/src/heap/incremental/: mod.rs
vm/src/heap/semispace/: mod.rs
vm/src/interpreter/: context.rs  mod.rs
vm/src/runtime/: cell.rs  config.rs  mod.rs  module.rs  process.rs  process_functions.rs  state.rs  value.rs
vm/src/runtime/scheduler/: mod.rs  process_worker.rs  timeout_worker.rs  worker.rs
vm/src/util/: mem.rs  ptr.rs  tagged.rs
