[package]
name = "jlightc"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmap = "0.1"
jlight-vm = {path = "jlight-vm"}
regalloc = {path = "jlight-vm/regalloc.rs/lib"}
hashlink = "0.4"

