[package]
name = "jlightc"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmap = "0.1"
hashlink = "0.4"
simple_logger = "*"
structopt = "0.3"
log = "0.4"
waffle = {git = "https://github.com/jazz-lang/waffle"}
[profile.release]
opt-level = 3
lto = true
debug = true