[package]
name = "jlight-vm"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.3"
parking_lot = "0.10"
crossbeam-deque = "0.7"
crossbeam-channel = "0.4"
mimalloc = "0.1"
lazy_static = "1.4"
num_cpus = "1.12"
fxhash = "0.2"
color-backtrace = { version = "0.3", default-features = false }
regalloc = {path = "regalloc.rs/lib/"}
cfg-if = "0.1"
[profile.release]
lto = true
panic="abort"

[features]
default = ["use-value64"]
use32-64-value = []
use-value64 = []
