[package]
name = "jlight-vm"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.3"
parking_lot = {version = "0.10",optional = true}
crossbeam-deque = "0.7"
crossbeam-channel = "0.4"
lazy_static = "1.4"
num_cpus = "1.12"
mimalloc = "0.1"
fxhash = "0.2"
color-backtrace = { version = "0.3", default-features = false }
regalloc = "0.0.4"
cfg-if = "0.1"
log = "0.4"
libc = "0.2.66"
[target.'cfg(target_family = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","processthreadsapi","synchapi","sysinfoapi"] }
kernel32-sys = "0.2"

[profile.release]
lto = true
opt-level = 2
debug = true
[features]
default = ["use-value64","multithreaded"]
use32-64-value = []
use-value64 = []
multithreaded = ["parking_lot"]
